objects/User_Preference__c.object
<CustomObject>
    <description>This holds the community user preference</description>
    <fields>
        <fullName>Aliases_to_Search__c</fullName>
        <label>Aliases to Search</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Notes_Notification_Freq__c</fullName>
        <label>Application Notes Notification Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COS_CaseDetail_Selected_Columns__c</fullName>
        <label>COS_CaseDetail_Selected_Columns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>COS_ViewRequest_Selected_Columns__c</fullName>
        <label>COS_ViewRequest_Selected_Columns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>CRM_Contact_Id - DO NOT USE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Ids_In_Grid__c</fullName>
        <label>Case Ids In Grid</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Types_to_Search__c</fullName>
        <label>Community Types to Search</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom IC SKILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification Shared Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Level Synthesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design and Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom IC Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design IP and Verification IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware/Software Co-Development, Verification and Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC Packaging and SiP Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed-Signal Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB SKILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silicon Signoff and Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CosViewRequest_search__c</fullName>
        <label>CosViewRequest_search</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CosViewRequest_search_case_group__c</fullName>
        <label>CosViewRequest_search_case_group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CosViewRequest_view__c</fullName>
        <label>CosViewRequest_view</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Datasheeets_Freq__c</fullName>
        <label>Course Datasheeets Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DbfindCCREngagementType__c</fullName>
        <label>DbfindCCREngagementType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DbfindCCRFamily__c</fullName>
        <label>DbfindCCRFamily</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DbfindCCRRequestType__c</fullName>
        <label>DbfindCCRRequestType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DbfindCCRSeverity__c</fullName>
        <label>DbfindCCRSeverity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DbfindCCRState__c</fullName>
        <label>DbfindCCRState</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Info_Notification_Freq__c</fullName>
        <label>Design Info Notification Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Favorite_Page_Name__c</fullName>
        <label>Favorite Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_Page_URL__c</fullName>
        <label>Favorite Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Installation_and_Configuration_Ntfy_Freq__c</fullName>
        <label>Installation and Configuration Ntfy Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_or_Changed_Features_Ntfy_Freq__c</fullName>
        <label>New or Changed Features Ntfy Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Format__c</fullName>
        <label>Notification Email Format</label>
        <picklist>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notify_CCR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify CCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_For_New_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify for new launched products</description>
        <label>Notify For New Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Release__c</fullName>
        <label>Notify Release</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Manuals_Notification_Freq__c</fullName>
        <label>Product Manuals Notification Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rapid_Adoption_Kits_Freq__c</fullName>
        <label>Rapid Adoption Kits Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Platform__c</fullName>
        <label>Technology Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Custom IC Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silicon-Package-Board Co-Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design of Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tensilica IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital IC Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification IP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Troubleshooting_Info_Notification_Freq__c</fullName>
        <label>Troubleshooting Info Notification Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Troubleshooting_Info__c</fullName>
        <description>Document Type</description>
        <label>Troubleshooting Info</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Same_Product_Preferences_for_search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Same Product Preferences for search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video_Notification_Freq__c</fullName>
        <label>Video Notification Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>User Preference</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>User Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>